--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "faid-al-naam-client",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,18 +10,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.3.24",
+    "hamburger-react": "^2.5.1",
+    "next": "14.2.5",
+    "next-intl": "^3.17.2",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "typescript": "^5"
   }
 }
