--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.4",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.3.24",
     "hamburger-react": "^2.5.1",
+    "mongodb": "^6.8.0",
     "next": "14.2.5",
     "next-intl": "^3.17.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@types/node": "^20",
