--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next-intl": "^3.17.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-player": "^2.16.0"
+    "react-player": "^2.16.0",
+    "react-quill": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
