--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 # next.js
 /.next/
 /out/
-
+next.config.mjs
 # production
 /build
 
@@ -34,3 +34,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+next.config.mjs
